--- a/css/estilo_index.css
+++ b/css/estilo_index.css
@@ -3,10 +3,49 @@ Autor: José Augusto Silva
 Versão: 1.0
 */
 .layout_principal {
+  width: 900px;
+  height: 600px;
+  margin: 30px 0 0 30px;
+  display: flex;
+  border: 2px solid green;
+}
+
+.layout_principal > .fundo_cenario_svg {
   background-image: url("/jogo-estourando-baloes/img/cenario.svg");
   background-size: contain;
   background-repeat: no-repeat;
   width: 900px;
-  height: 600px;
-  margin: 30px 0 0 30px;
+}
+
+.layout_principal > .selecao_nivel {
+  position: absolute;
+  left: 400px;
+  top: 380px;
+  width: 128px;
+  height: 46px;
+}
+
+.fundo_botao_nivel {
+  background-image: url("/jogo-estourando-baloes/img/elementos_botao_nivel.svg");
+  background-repeat: no-repeat;
+  width: 180px;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fundo_botao_nivel > #nivel_jogo {
+  width: 130px;
+  height: 50px;
+  background: transparent;
+  border: none;
+  font-size: 28px;
+  font-family: "Teko", sans-serif;
+  font-weight: 600;
+  text-align: center;
+  color: #795204;
+  margin: auto;
+  background-color: #ffe33e;
+  cursor: pointer;
 }
