--- a/css/estilo_index.css
+++ b/css/estilo_index.css
@@ -7,7 +7,6 @@ Versão: 1.0
   height: 600px;
   margin: 30px 0 0 30px;
   display: flex;
-  border: 2px solid green;
 }
 
 .layout_principal > .titulo_jogo {
@@ -25,6 +24,8 @@ Versão: 1.0
   background-size: contain;
   background-repeat: no-repeat;
   width: 900px;
+  height: 600px;
+  border-radius: 20px;
 }
 
 .layout_principal > .selecao_nivel {
