--- a/css/estilo_index.css
+++ b/css/estilo_index.css
@@ -5,8 +5,9 @@ Versão: 1.0
 .layout_principal {
   width: 900px;
   height: 600px;
-  margin: 30px 0 0 30px;
-  display: flex;
+  position: fixed;
+  left: 30px;
+  top: 30px
 }
 
 /* Controles audio */
@@ -33,8 +34,8 @@ Versão: 1.0
   height: 250px;
   background-repeat: no-repeat;
   position: absolute;
-  top: 120px;
-  left: 240px;
+  top: 90px;
+  left: 220px;
 }
 
 .layout_principal > .fundo_cenario_svg {
@@ -48,8 +49,8 @@ Versão: 1.0
 
 .layout_principal > .selecao_nivel {
   position: absolute;
-  left: 400px;
-  top: 380px;
+  left: 370px;
+  top: 330px;
   width: 128px;
   height: 46px;
 }
@@ -60,8 +61,8 @@ Versão: 1.0
   height: 100px;
   background-repeat: no-repeat;
   position: absolute;
-  left: 350px;
-  top: 460px;
+  left: 320px;
+  top: 410px;
   cursor: pointer;
 }
 
